--- a/style.css
+++ b/style.css
@@ -1,137 +1,63 @@
-body {
-    background: rgb(255, 211, 242);
-    color: rgb(251, 251, 251);
-    padding: 10px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    
+]body {
+  background: rgb(223, 155, 213);
+  color: rgb(240, 175, 228);
+  padding: 10px;
+  font-family: arial;
 }
 #all-contents {
-  max-width: 500px;
-    margin: auto;
+max-width: 800px;
+  margin: auto;
 }
 
 /* navigation menu */
 nav {
-    background: rgb(246, 160, 233);
-   margin: 0px auto;
-   margin-bottom: 20px;
-    display: flex;
-    padding: 10px;
+  background: rgb(242, 172, 238);
+ margin: 0 auto;
+ margin-bottom: 20px;
+  display: flex;
+  padding: 10px;
 }
 h1 {
-    display: flex;
-    align-items: center;
-    flex: 1;
-    margin: 0;
+  display: flex;
+  align-items: center;
+  color: white;
+  flex: 1;
+  margin: 0;
 }
 #nav-ul {
-    list-style-image: none;
+  list-style-image: none;
 }
 .nav-li {
-    display: inline-block;
-    padding: 0 10px;
+  display: inline-block;
+  padding: 0 10px;
 }
 a {
-    text-decoration: none;
-    color: #000000;
+  text-decoration: none;
+  color: #fff;
 }
 
 /* main container area beneath menu */
 main {
-    background: rgb(255, 197, 251);
-    display: flex;
+  background: rgb(246, 203, 244);
+  display: flex;
 }
 .sidebar {
-    margin-right: 25px;
-    padding: 10px;
+  margin-right: 25px;
+  padding: 10px;
 }
 .sidebar-img {
-    width: 200px;
+  width: 200px;
 }
 .content {
-    flex: 1;
-    padding: 15px;
+  flex: 1;
+  padding: 15px;
 }
 
-/*portfolio styles */
+/* portfolio styles */
 #interests {
-    border: 4px rgb(255, 255, 255) ridge;
-    padding: 8px;
+  border: 4px rgb(255, 255, 255) ridge;
+  padding: 8px;
 }
 h2, h3 {
-    margin: 0px;
-}
-.content h1 {
-    color: rgb(255, 255, 255);
-}
-
-#portfolio {
-    list-style-type: none;
-    padding-left: 0;
-}
-
-#portfolio li {
-    background: #d496cd;
-    padding: 10px;
-    border-radius: 10px;
-    margin-bottom: 10px;
-}
-
-#portfolio li:hover {
-    background: #eea3e9;
-}
-
-#portfolio a {
-    text-decoration: none;
-    color: #ffffff;
-}
- 
-/* responsive web design */
- @media screen and (min-width: 120px) and (max-width: 1080px) {
-    main {
-      height: 100ch;
-      zoom: 1.5;
-      display: grid;
-    }
-
-    h1 {
-      font-size: 44px;
-    }
-
-    h2 {
-      font-size: 42px;
-    }
-
-    h3 {
-      font-size: 36px;
-    }
-
-    #all-contents {
-      height: 100ch;
-      margin: none;
-    }
-
-    a {
-      font-size: 42px;
-    }
-
-    .sidebar {
-      margin-right: 0px;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .sidebar-img {
-      width: 100%;
-    }
-
-    p,
-    li {
-      font-size: 24px;
-    }
-
-    .content {
-      align-content: center;
-      justify-content: center;
-    }
+  margin: 0px;
 }
